--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -51,25 +51,13 @@
                                 <a class="nav-link headerNavLink" href="/">Главная<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link headerNavLink" href="/products/">Товары</a>
+                                <a class="nav-link headerNavLink" href="/products/">Каталог товаров</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link headerNavLink" href="/#contacts">Контакты</a>
                             </li>
-                            <li class="nav-item active dropdown">
-                                <a class="nav-link headerNavLink dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Семена
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    {% block nav_seeds %}
-                                        content
-                                    {% endblock nav_seeds %}
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">О семенах</a>
-                                </div>
-                                <li class="nav-item active">
-                                    <a class="nav-link headerNavLink" href="/cart/">Корзина</a>
-                                </li>
+                            <li class="nav-item active">
+                                <a class="nav-link headerNavLink" href="/cart/">Корзина</a>
                             </li>
                         </ul>
                     </div>
