--- a/src/templates/make_order.html
+++ b/src/templates/make_order.html
@@ -79,7 +79,7 @@
 			</div>
 
 			<div class="contentSubSubTitle orderInfo">
-				Оформите заказ - сможете забрать его в магазине.
+				Оформите заказ, потом сможете забрать его в магазине.
 			</div>
 
 		</div>
