--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -263,3 +263,9 @@ header {
     transition: .8s;
     color: white;
 }
+
+.shadow_modal {
+    -webkit-box-shadow: 0px 0px 38px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 38px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 38px 0px rgba(0,0,0,0.75);
+}
