--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -156,7 +156,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="http://demidob.site/">DEM!DOB & EMEL!ANOB</a>
+        <a href="http://demidob.site/">Gradie</a>
     </div>
     <!-- Copyright -->
 
