Some UX changes

--- a/src/templates/thankyou.html
+++ b/src/templates/thankyou.html
@@ -35,7 +35,7 @@
     				Номер заказа: №{{oid}}
     			</div>
     			<div class="contentSubSubTitle">
-    				Для получения товара в магазине назовите консультанту его номер.
+    				Для получения заказа в магазине назовите консультанту его номер.
     			</div>
     		</div>	
     		<div class="col-md-5 text-center">
