--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -170,7 +170,7 @@
     <!-- Footer Links -->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <div class="footer-copyright text-center py-3">© 2020 Сайт сделан командой
         <a href="http://demidob.site/">Gradie</a>
     </div>
     <!-- Copyright -->
