--- a/src/templates/product_details.html
+++ b/src/templates/product_details.html
@@ -92,7 +92,7 @@
 	        <span id="modalAmount"></span>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn" data-dismiss="modal">Закрыть</button>
+	        <button type="button" class="btn" data-dismiss="modal">Продолжить покупки</button>
 	        <a href="/cart/" class="btn">Перейти в корзину</a>
 	      </div>
 	    </div>
