--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -37,7 +37,7 @@
                     Ваша корзина пуста.
                 </div>
                 <div class="contentSubSubTitle">
-                    <a href="/products/">Начать покупки</a>
+                    <a href="/products/" class="btn">Начать покупки</a>
                 </div>
             </div>  
             <div class="col-md-5 text-center">
