--- a/src/static/styles/home_page.css
+++ b/src/static/styles/home_page.css
@@ -64,3 +64,26 @@ body {
 .contacts {
 	margin-top: 50px;
 }
+
+.categoryPromo {
+	width: 150px;
+	height: 150px;
+
+	background-image: url('https://demidob.000webhostapp.com/dch/h/el.svg');
+	background-position: center;
+	background-size: 150px;
+
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 27px;
+
+
+	color: #CC7654;
+    font-size: 20px;
+    transition: 1s;
+}
+
+.categoryPromo:hover {
+	transform: rotate(-15deg);
+    transition: 1s;
+}
