- .block_just_border

--- a/src/templates/product_details.html
+++ b/src/templates/product_details.html
@@ -35,7 +35,7 @@
 					</div>
 				</div>
 				<div class="col-lg-5 text-center">	
-					<div class="divProductIcon block_just_border">
+					<div class="divProductIcon">
 						<img src="{{pr.icon}}" class="productIcon" alt="">
 					</div>
 					<div class="underImg text-center">
