'Producer' field added to product_details.html

--- a/src/templates/product_details.html
+++ b/src/templates/product_details.html
@@ -28,10 +28,14 @@
 					<div class="divTovar">
 						<span class="contentSubtitle category">Категория: </span> 
 						<span class="contentSubSubTitle">{{pr.category}}</span>
-					<div class="divDiscription">
-						<div class="contentSubtitle category">Описание: </div>
-						<span class="contentSubSubTitle discription">{{pr.description}}</span>
-					</div>
+						<div class="divDiscription">
+							<span class="contentSubtitle category">Производитель: </span>
+							<span class="contentSubSubTitle discription">{{pr.producer}}</span>
+						</div>
+						<div class="divDiscription">
+							<div class="contentSubtitle category">Описание: </div>
+							<span class="contentSubSubTitle discription">{{pr.description}}</span>
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 text-center">	
