--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'mainFont';
-    src: url('http://demidob.000webhostapp.com/dch/fonts/12002.ttf');
+    src: url('/static/fonts/12002.ttf');
 }
 
 body {
