--- a/src/templates/make_order.html
+++ b/src/templates/make_order.html
@@ -99,7 +99,7 @@
 					</div>
 					<div class="dFormContent contentSubSubTitle">
 						<label for="id_phone">Телефон:</label>
-						<input class="dFormInput" type="text" name="phone" maxlength="12" required="" id="id_phone" placeholder="Если что, мы свяжемся с Вами">
+						<input class="dFormInput" type="text" name="phone" maxlength="12" required="" id="id_phone">
 					</div>
 					<div class="dFormContent contentSubSubTitle">
 						<label for="id_email">E-Mail:</label>
@@ -107,7 +107,7 @@
 					</div>
 					<div class="dFormContent contentSubSubTitle">
 						<label for="id_comment">Комментарий к заказу:</label>
-						<textarea class="dFormInput" cols="20" rows="5" name="comment" cols="40" rows="10" maxlength="500" required="" id="id_comment"></textarea>
+						<textarea class="dFormInput" cols="20" rows="5" name="comment" cols="40" rows="10" maxlength="500" id="id_comment"></textarea>
 					</div>
 				</div>
 				<div class="text-right make_order_button"><input type="submit" class="btn" value="Оформить заказ"></div>
