Some UI changes

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -245,7 +245,7 @@ header {
 
 
 .page_block {
-    margin-top: 158px; /* 108px */ /* 178 */
+    margin-top: 108px; /* 108px */ /* 178 */ /* 158 */
 }
 
 .block_content {
