--- a/src/static/styles/home_page.css
+++ b/src/static/styles/home_page.css
@@ -14,10 +14,10 @@ body {
 }
 
 #discAnouncement {
-	font-size: 20px;
+	/*font-size: 20px;*/
 	/*color: #657B66;*/
-	margin-top: 17px;
-	margin-bottom: 17px;
+	margin-top: 27px;
+	/*margin-bottom: 17px;*/
 }
 
 .push_right {
