--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -265,14 +265,14 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 1300%;
-    transition: .8s;
+    transition: 1.8s;
     color: white;
 }
 
 .btn:hover {
     background-position: center;
     background-size: 200%;   
-    transition: .8s;
+    transition: .7s;
     color: white;
 }
 
