--- a/src/static/styles/product_block.css
+++ b/src/static/styles/product_block.css
@@ -27,6 +27,7 @@
 
     .productDiv:hover {
       background-color: rgba(255, 255, 255, .05);
+      background-size: 120% 120%;
       transition: 1s;
     }
 
@@ -71,11 +72,17 @@
 
     .productInfo {
       background-color: rgba(255, 255, 255, .8);
-      border-radius: 53px;
+      border-radius: 40px;
       padding: 10px;
       padding-left: 25px;
       padding-right: 25px;
       font-family: 'mainFont';
+      transition: 1s;
+    }
+
+    .productInfo:hover {
+      border-radius: 53px;
+      transition: 1s;
     }
 
     .productTitle {
