--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -21,6 +21,10 @@
 	<link rel="stylesheet" href="{% static 'styles/own_carousel.css' %}">
 {% endblock additional_styles %}
 
+{% block mp_link %}
+	
+{% endblock mp_link %}
+
 
 
 {% load calcPrice %}
