--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -280,6 +280,10 @@ header {
     color: white;
 }
 
+.navBtn {
+    margin-top: 17px;
+}
+
 .shadow_modal {
     -webkit-box-shadow: 0px 0px 38px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 38px 0px rgba(0,0,0,0.75);
