order_help.html page added

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -141,7 +141,7 @@
                 <a href="/#contacts">Контакты</a>
             </li>
             <li>
-                <a href="#!">О семенах</a>
+                <a href="/cart/">Корзина</a>
             </li>
             </ul>
 
@@ -152,11 +152,11 @@
         <div class="col-md-3 mb-md-0 mb-3">
 
             <!-- Links -->
-            <h5 class="text-uppercase"></h5>
+            <h5 class="text-uppercase">Помощь</h5>
 
             <ul class="list-unstyled">
             <li>
-                <a href="/cart/">Корзина</a>
+                <a href="/help/order/">Оформление заказа</a>
             </li>
             </ul>
 
