--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -94,7 +94,11 @@
             <div class="text-right" style="margin-top: 27px;">
                 <a href="/order/" class="btn">Оформить заказ</a>
             </div>
-        {% endif %}		
+        {% endif %}
+    <hr>
+        <div class=" text-center" style="margin-top: 27px;">
+                <a href="/help/order/" class="btn">Что будет при оформлении заказа?</a>
+        </div>
 
 	</div>
 
