Changing the UI

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -34,7 +34,7 @@
 	<div class="row">
 			<div class="col-md-7">
 					<div class="contentTitle" id="center_me">Добро пожаловать{{name|safe}}</div>
-					<div id="discAnouncement" class="contentSubtitle">
+					<div class="contentSubtitle" id="discAnouncement">
 						Наши скидки:
 
 						<div class="contentNavigation text-left">
