--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -50,7 +50,7 @@
                     <div id="headerTitle">
                         <div class="row" style="height: 100%;">
                             <div class="col-12 my-auto text-center">
-                                Дачник
+<!--                                Дачник-->
                             </div>
                         </div>
                     </div>
